--- a/analysis_of_meteorological_data.ipynb
+++ b/analysis_of_meteorological_data.ipynb
@@ -6,7 +6,7 @@
       "name": "analysis of meteorological data.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMAJYF/xjx3aALMb7n4Stgc",
+      "authorship_tag": "ABX9TyMfjkLM4sODwQzPwSoDg38y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "id": "27wNzm4X0gfA"
       },
       "source": [
-        "Mount the drive which contain required data set"
+        "### Mount the drive which contain required data set\n"
       ]
     },
     {
@@ -76,7 +76,7 @@
         "id": "UuMtOHVCzNXd"
       },
       "source": [
-        "1.Importing necessary libraries for analysis"
+        "### 1.Importing necessary libraries for analysis"
       ]
     },
     {
@@ -99,7 +99,7 @@
         "id": "_foJVVF5z4iC"
       },
       "source": [
-        "2.Read the dataset"
+        "### 2.Read the dataset"
       ]
     },
     {
@@ -327,7 +327,7 @@
         "id": "Q0wxguMj1QJV"
       },
       "source": [
-        "3.Display dimensions(no. of rows and columns) of dataset"
+        "### 3.Display dimensions(no. of rows and columns) of dataset"
       ]
     },
     {
@@ -361,19 +361,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "v0nNQqq_0V5v"
-      },
-      "source": [
-        "# New Section"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "mAV3mCbz19BG"
       },
       "source": [
-        "4.Display datatypes of the dataset\n"
+        "4.Display datatypes of the dataset\n",
+        "### New Section"
       ]
     },
     {
@@ -422,7 +414,8 @@
         "id": "-OdX2Nug2MMe"
       },
       "source": [
-        "5.Display statistical data of the dataset\n"
+        "5.Display statistical data of the dataset\n",
+        "### New Section"
       ]
     },
     {
@@ -583,7 +576,7 @@
         "id": "4ntLUfVx29wg"
       },
       "source": [
-        "6.Data Cleaning"
+        "### 6.Data Cleaning"
       ]
     },
     {
@@ -708,17 +701,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sIoTPoHA8XGA"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1153,7 +1135,7 @@
         "id": "fcN9uOZf8ZS1"
       },
       "source": [
-        "**6. Perform Exploratory Data Analysis**\n",
+        "### 6. Perform Exploratory Data Analysis\n",
         "\n",
         "Given:\n",
         "\n",
@@ -1168,7 +1150,7 @@
         "id": "Yaqbw72I8mAJ"
       },
       "source": [
-        "Relation between Apparent Temperature & Humidity Using Regplot"
+        "**Relation between Apparent Temperature & Humidity Using Regplot**"
       ]
     },
     {
@@ -1220,7 +1202,7 @@
         "id": "g-yCQ2_b9S2x"
       },
       "source": [
-        "Correlation between Apparent temperature & Humidity\n"
+        "**Correlation between Apparent temperature & Humidity**\n"
       ]
     },
     {
@@ -1318,7 +1300,7 @@
         "id": "bm_TcxBLA28q"
       },
       "source": [
-        "lineplot() function to plot the Variation of Apparent Temperature and Humidity with time."
+        "**lineplot() function to plot the Variation of Apparent Temperature and Humidity with time**"
       ]
     },
     {
@@ -1379,7 +1361,7 @@
         "id": "qpCCYABgBaO9"
       },
       "source": [
-        "2D Scatter Plot with Color Coding for each Summary type"
+        "**2D Scatter Plot with Color Coding for each Summary type**"
       ]
     },
     {
@@ -1434,7 +1416,7 @@
         "id": "2y1FXYrsB7Os"
       },
       "source": [
-        "Univariate Analysis For Apparent Temperature "
+        "**Univariate Analysis For Apparent Temperature **"
       ]
     },
     {
@@ -1478,7 +1460,7 @@
         "id": "JiHsTBiTCEvC"
       },
       "source": [
-        "Univariate Analysis For Humidity"
+        "**Univariate Analysis For Humidity**"
       ]
     },
     {
@@ -1528,7 +1510,7 @@
         "id": "mBBDJpC0CWBG"
       },
       "source": [
-        "Function for plotting Humidity & Apparent Temperature for all months"
+        "**Function for plotting Humidity & Apparent Temperature for all months**"
       ]
     },
     {
